# pr-agent

./: .gitignore  .pr_agent.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  MANIFEST.in  README.md  SECURITY.md  TEMP_PR_AGENT_TEST.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-custom-image.yml  publish.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: 1.0-REQUIREMENTS.md
.planning/phases/01-config-skeleton-and-fork-safe-seam/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-REVIEW-FIX.md  01-REVIEW.md  01-SECURITY.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-angular-convention-title-rewriting/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-REVIEW.md  02-SECURITY.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-org-template-prepend-with-idempotency/: 03-01-PLAN.md  03-01-SUMMARY.md  03-CONTEXT.md  03-REVIEW.md  03-SECURITY.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-expose-v1-0-describe-toggles-via-config-env-vars-and-embed-p/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docker/: Dockerfile
docs/: mkdocs.yml
docs/docs/core-abilities/: agent_skills.md  fetching_ticket_context.md
docs/docs/installation/: bitbucket.md  gitea.md  github.md  gitlab.md  locally.md
docs/docs/tools/: improve.md  review.md
docs/docs/usage-guide/: additional_configurations.md  automations_and_usage.md  changing_a_model.md  configuration_options.md  configuration_reference.md  tokenless_diff_mode.md
docs/fork/: org-mr-enhancements.md
docs/superpowers/plans/: 2026-05-01-repo-context-files.md
pr_agent/: cli.py  config_loader.py
pr_agent/agent/: pr_agent.py
pr_agent/algo/: __init__.py  artifacts.py  best_practices.py  cli_args.py  git_patch_processing.py  inline_comment_dedup.py  mcp_handler.py  output_repair.py  repo_context.py  skills_loader.py  token_handler.py  utils.py
pr_agent/algo/ai_handlers/: codex_auth.py  langchain_ai_handler.py  litellm_ai_handler.py
pr_agent/git_providers/: __init__.py  azuredevops_provider.py  bitbucket_provider.py  bitbucket_server_provider.py  codecommit_client.py  diff_parsing.py  diff_provider.py  gerrit_provider.py  git_provider.py  gitea_provider.py  github_provider.py  gitlab_provider.py  local_git_provider.py  plain_diff_provider.py  utils.py
pr_agent/mcp/: integration.py  runtime.py
pr_agent/mosaico/: dispatch.py  env_bridge.py  executor.py
pr_agent/servers/: azuredevops_server_webhook.py  bitbucket_app.py  bitbucket_server_webhook.py  gerrit_server.py  gitea_app.py  github_action_runner.py  github_app.py  github_polling.py  gitlab_webhook.py  utils.py
pr_agent/settings/: .secrets_template.toml  configuration.toml  org_template.md  pr_description_prompts.toml  pr_line_questions_prompts.toml  pr_questions_prompts.toml  pr_reviewer_prompts.toml
pr_agent/settings/code_suggestions/: pr_code_suggestions_prompts.toml  pr_code_suggestions_prompts_not_decoupled.toml
pr_agent/tools/: pr_add_docs.py  pr_code_suggestions.py  pr_config.py  pr_description.py  pr_generate_labels.py  pr_help_docs.py  pr_help_message.py  pr_line_questions.py  pr_questions.py  pr_reviewer.py  pr_similar_issue.py  pr_update_changelog.py  progress_comment.py  registry.py  ticket_pr_compliance_check.py
tests/e2e_tests/: test_bitbucket_app.py
tests/health_test/: main.py
tests/unittest/: _settings_helpers.py  test_apply_repo_settings_security.py  test_artifacts.py  test_azure_devops_incremental.py  test_azure_devops_provider.py  test_base_model_name.py  test_bitbucket_provider.py  test_cli_config_branch.py  test_cli_diff_mode.py  test_cli_plain_diff_mode.py  test_codex_auth_json.py  test_config_env_override.py  test_conventional_title_publish_seam.py  test_convert_to_markdown.py  test_describe_byte_identical_when_off.py  test_diff_mode_e2e.py  test_diff_parsing.py  test_diff_provider.py  test_extra_config_url.py  test_get_max_tokens.py  test_git_provider_utils.py  test_gitea_app.py  test_gitea_provider.py  test_github_action_runner_core.py  test_github_app_timeout_core.py  test_github_clone_url_validation.py  test_github_provider_import.py  test_github_provider_settings.py  test_gitlab_provider.py  test_gitlab_reviewer_assignment.py  test_ignore_repositories.py  test_inline_comment_dedup.py  test_jinja_sandbox.py  test_jira_ticket_extraction.py  test_litellm_api_key_guard.py  test_litellm_chat_completion_core.py  test_litellm_claude_adaptive_thinking.py  test_litellm_claude_extended_thinking.py  test_litellm_databricks_provider.py  test_litellm_grok_reasoning_effort.py  (+33 more)
